:lipstick: adds fonts and color functions

--- a/scss/_konnektoren.scss
+++ b/scss/_konnektoren.scss
@@ -5,10 +5,11 @@
 * * https://sass-guidelin.es/#the-7-1-pattern
 */
 
-// import vendors first
+/* import vendors first */
 @import "vendors";
 
 @import "abstracts";
+@import "base";
 
-// import components last
+/* import components last */
 @import "components";
