--- a/scss/components/_timer.scss
+++ b/scss/components/_timer.scss
@@ -3,8 +3,8 @@
     align-items: center;
     gap: 1rem;
     font-size: font-size("lg");
-    color: color("light");
-    background-color: color("primary");
+    color: color("text-secondary");
+    background-color: color("backgroun-primary");
     padding: 1rem;
     border-radius: 0.5rem;
     margin-bottom: 1rem;
