--- a/scss/abstracts/_mixins.scss
+++ b/scss/abstracts/_mixins.scss
@@ -1,14 +1,14 @@
 @mixin respond-to($breakpoint) {
     @if $breakpoint == "small" {
-        @include gls-breakpoint(min, small) {
+        @include gls-breakpoint(max, small) {
             @content;
         }
     } @else if $breakpoint == "medium" {
-        @include gls-breakpoint(min, medium) {
+        @include gls-breakpoint(max, medium) {
             @content;
         }
     } @else if $breakpoint == "large" {
-        @include gls-breakpoint(min, large) {
+        @include gls-breakpoint(max, large) {
             @content;
         }
     }
