--- a/scss/components/_timer.scss
+++ b/scss/components/_timer.scss
@@ -1,34 +1,3 @@
 .timer {
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-    font-size: font-size("lg");
-    color: color("text-secondary");
-    background-color: color("backgroun-primary");
-    padding: 1rem;
-    border-radius: 0.5rem;
-    margin-bottom: 1rem;
-
-    &__icon {
-        font-size: font-size("2xl");
-    }
-
-    &__content {
-        display: flex;
-        flex-direction: column;
-    }
-
-    &__title {
-        margin-bottom: 0.5rem;
-        font-weight: font-weight("bold");
-    }
-
-    &__text {
-        font-weight: font-weight("medium");
-    }
-
-    @include respond-to("small") {
-        font-size: font-size("md");
-        padding: 0.5rem;
-    }
+    @include icon-title-content;
 }
