--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -51,6 +51,25 @@ $font-sizes: (
     "900": 3rem,
 );
 
+$spacing: (
+    "0": 0,
+    "1": 0.25rem,
+    "2": 0.5rem,
+    "3": 0.75rem,
+    "4": 1rem,
+    "5": 1.25rem,
+    "6": 1.5rem,
+    "8": 2rem,
+    "10": 2.5rem,
+    "12": 3rem,
+    "16": 4rem,
+    "xs": 0.25rem,
+    "sm": 0.5rem,
+    "md": 1rem,
+    "lg": 1.5rem,
+    "xl": 2rem,
+);
+
 /* Line Heights */
 $line-heights: (
     "tight": 1.25,
@@ -67,4 +86,27 @@ $font-weights: (
     "medium": 500,
     "semibold": 600,
     "bold": 700,
+);
+
+$z-index: (
+    "0": 0,
+    "10": 10,
+    "20": 20,
+    "30": 30,
+    "40": 40,
+    "50": 50,
+    "auto": "auto",
+    "map": 10,
+    "sidenav": 1000,
+    "progress": 20,
+);
+
+$border-radius: (
+    "none": 0,
+    "sm": 0.125rem,
+    "md": 0.375rem,
+    "lg": 0.5rem,
+    "xl": 1rem,
+    "2xl": 2rem,
+    "full": 9999px,
 );
