--- a/scss/themes/_dark.scss
+++ b/scss/themes/_dark.scss
@@ -14,6 +14,8 @@
     --gray-700: #e9ecef;
     --gray-800: #f8f9fa;
     --gray-900: #ffffff;
+    --dark-color: #f8f9fa;
+    --light-color: #353b41;
     --danger-color: #ff5252;
     --warning-color: #ffb74d;
     --info-color: #03dac6;
