--- a/scss/themes/_light.scss
+++ b/scss/themes/_light.scss
@@ -14,6 +14,8 @@
     --gray-700: #495057;
     --gray-800: #343a40;
     --gray-900: #212529;
+    --dark-color: #343a40;
+    --light-color: #f8f9fa;
     --danger-color: #dc3545;
     --warning-color: #ffc107;
     --info-color: #17a2b8;
