--- a/scss/atoms/_card.scss
+++ b/scss/atoms/_card.scss
@@ -2,19 +2,17 @@
 
 @mixin card-base {
     border-radius: border-radius("lg");
-    overflow: hidden;
-    width: 100%;
 }
 
 @mixin card-shadow($level: "default") {
     @if $level == "soft" {
-        box-shadow: 0 2px 4px rgba(color("dark"), 0.05);
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     } @else if $level == "medium" {
-        box-shadow: 0 4px 6px rgba(color("dark"), 0.1);
+        box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
     } @else if $level == "hard" {
-        box-shadow: 0 8px 16px rgba(color("dark"), 0.15);
+        box-shadow: 0 4px 16px rgba(0, 0, 0, 0.3);
     } @else {
-        box-shadow: 0 2px 10px rgba(color("dark"), 0.1);
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
     }
 }
 
