--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -2,5 +2,6 @@
 @import "marketplace";
 @import "profile-points";
 @import "progress";
-@import "timer";
+@import "rating-stars";
 @import "share-page";
+@import "timer";
