--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -1,5 +1,6 @@
 @import "challenge";
 @import "marketplace";
+@import "profile-config";
 @import "profile-points";
 @import "progress";
 @import "rating-stars";
