:lipstick: styles informative markdown challenge

--- a/scss/components/challenge/_index.scss
+++ b/scss/components/challenge/_index.scss
@@ -1,5 +1,7 @@
 @import "actions";
 @import "config";
 @import "info";
+@import "informative";
+@import "informative_markdown";
 @import "rating";
 @import "review";
