:lipstick: style settings

--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -4,6 +4,6 @@
 @import "profile-points";
 @import "progress";
 @import "rating-stars";
+@import "settings";
 @import "share-page";
-@import "sort-table";
 @import "timer";
