:lipstick: add style for select language and level

--- a/scss/atoms/_index.scss
+++ b/scss/atoms/_index.scss
@@ -3,6 +3,7 @@
 @import "button";
 @import "card";
 @import "container";
-@import "message";
 @import "input";
+@import "message";
+@import "select";
 @import "toggle";
