:sparkles: adds menu

--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -1,6 +1,7 @@
 @import "certificates";
 @import "challenge";
 @import "marketplace";
+@import "navigation";
 @import "profile-config";
 @import "profile-points";
 @import "progress";
