:sparkles: adds badge component

--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -99,6 +99,9 @@ $z-index: (
     "map": 10,
     "sidenav": 1000,
     "progress": 20,
+    "modal": 30,
+    "tooltip": 40,
+    "floating": 50,
 );
 
 $border-radius: (
