:sparkles: adds chat component

--- a/scss/atoms/_index.scss
+++ b/scss/atoms/_index.scss
@@ -3,6 +3,7 @@
 @import "button";
 @import "card";
 @import "container";
+@import "form-controls";
 @import "input";
 @import "message";
 @import "select";
