--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -1,6 +1,7 @@
 @import "badge";
 @import "certificates";
 @import "challenge";
+@import "chat";
 @import "marketplace";
 @import "navigation";
 @import "profile-config";
