:sparkles: adds status message component

--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -2,6 +2,8 @@
 @import "certificates";
 @import "challenge";
 @import "chat";
+@import "logo";
+@import "leaderboard";
 @import "marketplace";
 @import "navigation";
 @import "profile-config";
@@ -10,7 +12,6 @@
 @import "rating-stars";
 @import "settings";
 @import "share-page";
+@import "status_message";
 @import "social-links";
 @import "timer";
-@import "logo";
-@import "leaderboard";
