:lipstick: add horizontal layout to navigation wrapper

--- a/scss/components/navigation/_index.scss
+++ b/scss/components/navigation/_index.scss
@@ -1,3 +1,8 @@
+.navigation-wrapper {
+    @include horizontal-layout;
+    background: color("nav-background");
+}
+
 .navigation {
     background: color("nav-background");
     display: flex;
