:sparkles: adds feedback popup

--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -2,6 +2,7 @@
 @import "certificates";
 @import "challenge";
 @import "chat";
+@import "feedback-popup";
 @import "gdrive-backup";
 @import "logo";
 @import "leaderboard";
