:lipstick: fix challenge config style

--- a/scss/components/challenge/_config.scss
+++ b/scss/components/challenge/_config.scss
@@ -1,10 +1,13 @@
 .challenge-config {
-    @include position-absolute;
     @include card(
         (
             theme: "dark",
         )
     );
     z-index: z-index("modal");
-    color: color("light");
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: auto;
+    flex-grow: 1;
 }
