:sparkles::lipstick: adds style for multiple choice circle

--- a/scss/components/challenge/_index.scss
+++ b/scss/components/challenge/_index.scss
@@ -3,6 +3,8 @@
 @import "info";
 @import "informative";
 @import "informative_markdown";
+@import "multiple-choice-circle";
+@import "question";
 @import "rating";
 @import "review";
 @import "sort-table";
