:sparkles: adds options style

--- a/scss/components/challenge/_index.scss
+++ b/scss/components/challenge/_index.scss
@@ -4,6 +4,7 @@
 @import "informative";
 @import "informative_markdown";
 @import "multiple-choice-circle";
+@import "options";
 @import "question";
 @import "rating";
 @import "review";
