--- a/scss/components/challenge/_multiple-choice-circle.scss
+++ b/scss/components/challenge/_multiple-choice-circle.scss
@@ -43,38 +43,7 @@
     .multiple-choice-option {
         position: absolute;
         transform-origin: center;
-        z-index: z-index("tooltip");
-
-        span {
-            @include card(
-                (
-                    padding: "sm",
-                    shadow: "soft",
-                    theme: "background-primary",
-                )
-            );
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            min-width: 70px;
-            min-height: 70px;
-            max-width: 120px;
-            padding: spacing("sm") spacing("md");
-            border-radius: border-radius("full");
-            cursor: pointer;
-            transition: all 0.3s ease;
-            font-size: font-size("400");
-            font-weight: font-weight("medium");
-            text-align: center;
-            hyphens: auto;
-
-            &:hover {
-                transform: scale(1.1);
-                background-color: color("primary");
-                color: color("light");
-                @include elevation(2);
-            }
-        }
+        z-index: z-index("modal");
 
         @for $i from 1 through 8 {
             &:nth-child(#{$i}) {
