:sparkles: adds multiple choice style

--- a/scss/components/challenge/_index.scss
+++ b/scss/components/challenge/_index.scss
@@ -1,11 +1,13 @@
 @import "actions";
 @import "config";
 @import "info";
-@import "informative";
-@import "informative_markdown";
-@import "multiple-choice-circle";
 @import "options";
 @import "question";
 @import "rating";
 @import "review";
+
+@import "informative";
+@import "informative_markdown";
+@import "multiple-choice";
+@import "multiple-choice-circle";
 @import "sort-table";
