--- a/scss/components/challenge/_index.scss
+++ b/scss/components/challenge/_index.scss
@@ -8,6 +8,7 @@
 
 @import "informative";
 @import "informative_markdown";
+@import "multiple-choice-result";
 @import "multiple-choice";
 @import "multiple-choice-circle";
 @import "sort-table";
