:sparkles: adds gap fill component

--- a/scss/components/challenge/_index.scss
+++ b/scss/components/challenge/_index.scss
@@ -11,4 +11,6 @@
 @import "multiple-choice-result";
 @import "multiple-choice";
 @import "multiple-choice-circle";
+@import "gap-fill";
 @import "sort-table";
+@import "gap-fill-result";
